--- a/style.css
+++ b/style.css
@@ -17,8 +17,6 @@ padding-top: 20px;
 .italics {
     font-style: italic;
 }
-
-
   /* Code for the main page.*/
   .navbar {
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -75,8 +73,6 @@ padding-top: 20px;
   .showMenu {
     transform: translateY(0);
   }
-
-
   /* The code for author page.*/
   .menu {
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -102,11 +98,12 @@ padding-top: 20px;
     display:inline;
   }
   .menu a:hover {
-    background-color:coral;
+    background-color:goldenrod;
     color: white;
   }
   .bottom {
     background-color: white;
+    align-items: center;
   }
   .linksBottom a {
     display: inline;
@@ -114,6 +111,7 @@ padding-top: 20px;
     padding: 14px 20px;
     text-decoration: none;
     align-items: center;
+    margin-left: 12%;
   }
   .name {
     color:aliceblue;
@@ -193,10 +191,12 @@ padding-top: 20px;
     max-width: 800px; /* Adjust this width as needed */
     overflow-y: scroll;
     background: white;
+    align-items: center;
+    margin-left: 15%;
     padding: 0 20px; /* Adjust horizontal padding as needed */
 
   }
-  body {
+#body {
     margin: 0;
     padding: 0;
     display: flex;
@@ -232,17 +232,9 @@ padding-top: 20px;
     position:relative;
     display: block;
     cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
     text-align: center;
     padding-bottom: 10px;
     padding-top: 10px;
-    padding: auto;
-    color: #f0f8ff;
-    border-radius: 5px;
-    background-color: #483d8b;
   }
   .imageclick {
     text-align: center;
@@ -251,7 +243,7 @@ padding-top: 20px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
   .smslogos {
-    text-align: center;
+    align-items: center;
     height:50px;
     width:50px;
     margin:10px;
@@ -294,6 +286,22 @@ padding-top: 20px;
     from {opacity: 0;}
     to {opacity:1 ;}
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   /* Code for the student page*/
   .title {
@@ -385,6 +393,9 @@ padding-top: 20px;
   ol {
     margin-top: 0%;
   }
+
+
+
 
   /*Code for the content creator page*/
   .header {
