--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 img {
     display: block;
   }
+
+@font-face {
+    font-family: 'neon'; /* Replace with the desired font name */
+    src: url('../fonts/neon.ttf') format('truetype'); 
+  }
 html {
     scroll-behavior: smooth;
 }
@@ -73,6 +78,159 @@ padding-top: 20px;
   .showMenu {
     transform: translateY(0);
   }
+  .navigation {
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    width: 100%;
+    height: auto;
+    text-decoration: none;
+    text-align: right;
+    padding: 0;
+    margin: 0;
+    position: fixed;
+    background: #D4ADCF;
+  }
+  .navigation a {
+    color:#1B175D;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    text-align: right;
+    text-decoration: none;
+    padding: 25px; /* Adjust this value to add spacing between links */
+    padding-bottom: auto;
+  }
+  .navigation a:hover {
+    background-color:goldenrod;
+    color: white;
+  }
+  .navigation li {
+    margin-bottom: 20%; 
+    display:inline;
+  }
+  .maname {
+    color: #1B175D;
+    float: left;
+    padding: 10px;
+    padding-left: 5%;
+    font-style: normal;
+    font-family: neon;
+    font-stretch: wider;
+    font-variant: small-caps;
+    text-align: center;
+    text-decoration: overline;
+    letter-spacing: 2px;
+    font-size: x-large;
+  }
+  body {
+    background-image: url('QHG.gif'); /* Replace with the actual path */
+    background-size: cover; /* Scale the GIF to cover the entire screen */
+    background-position: center center; /* Center the GIF */
+    background-repeat: no-repeat; /* Prevent the GIF from repeating */ 
+  }
+  .center-logo {
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+  }
+  .ab {
+    font-family: neon;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#D4ADCF;
+  }
+  .descr {
+    margin-left: 20%;
+    margin-right: 20%;
+    text-align: center;
+    padding-bottom: 30px;
+    line-height: 30px;
+    color: white;
+    font-family:'Courier New', Courier, monospace;
+    font-weight: bold;
+  }
+  .describe {
+    background-image: url('5ABJ.gif');
+    
+  }
+  .ah {
+    text-align: center;
+    padding-bottom: 10%;
+    font-family:'Courier New', Courier, monospace;
+    text-decoration: none;
+  }
+  .ah a {
+    color: white; /* Inherit white color from the parent paragraph */
+    text-decoration: none; /* Remove underline from link */
+    font-weight: bold; /* Add this line for bold text */
+
+  }
+
+  .contain {
+    width: 80%; 
+    margin: 0 auto; 
+    
+  }
+  
+  .row {
+    display: flex; 
+    justify-content: space-between; 
+    margin-bottom: 20px; 
+  }
+  
+  .module {
+    background-color: white; 
+    border-radius: 5px; 
+    padding: 20px; 
+    text-align: center; 
+    flex: 1; /* Equal width for each module */
+    margin: 0 10px; /* Spacing between modules */
+    height: 300px; /* Set a fixed height for all modules */ 
+
+  }
+
+  .module:hover {
+    transform: scale(1.05); /* Slightly enlarge the module on hover */
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Add a subtle shadow on hover */
+  }
+  
+  .module img {
+    width: 100%; 
+    height: 50%; 
+    margin-bottom: 10px; 
+    top: 0; 
+    left: 0; 
+    object-fit: cover; /* Ensure image covers the entire height */
+  }
+  #footer {
+    background-color: #D4ADCF;
+    color: white; /* White text color for the footer */
+    text-align: center; /* Center the content horizontally */
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 75px;
+  }
+
+  .linksBottom {
+    display: flex; /* Arrange social media links horizontally */
+    justify-content: center; /* Center the links horizontally */
+  }
+  
+  .smslogos {
+    width: 30px; /* Set a fixed width for the social media icons */
+    height: 30px; /* Set a fixed height for the social media icons */
+    margin: 5px; /* Add some margin between the icons */
+  }
+
+
+
+
+
+
+
+
+
   /* The code for author page.*/
   .menu {
     font-family:Georgia, 'Times New Roman', Times, serif;
